<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="30dp"
    android:paddingLeft="30dp"
    android:background="@drawable/setting_background"
    tools:context="com.android.leezp.androidimhwweatherdemo.SetActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/activity_set_title"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_set_tempUnit"
            android:textColor="@color/lightGray"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_set_temp"
            android:textColor="@color/lightGray"
            android:textSize="20sp"/>

        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/setting_right_disable"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_set_openNotify"
            android:textColor="@color/white"
            android:textSize="25sp"/>
        
        <Switch
            android:id="@+id/activity_set_openNotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="20dp"
            android:textOn=""
            android:textOff=""
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_set_openUpdate"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <Switch
            android:id="@+id/activity_set_openUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="20dp"
            android:textOn=""
            android:textOff=""
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/activity_set_updateSpace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_set_updateSpace"
            android:textColor="@color/lightGray"
            android:textSize="25sp"/>

        <LinearLayout
            android:id="@+id/activity_set_updateClickPart"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_set_timeSpace"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_set_updateTime"
                android:textColor="@color/lightGray"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/activity_set_updateSelectImg"
                android:layout_marginLeft="20dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/setting_right_disable"/>

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

</LinearLayout>
