<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="12"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/main_background"
    tools:context="com.android.leezp.androidimhwweatherdemo.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/activity_main_setting"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:background="@drawable/main_setting"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/main_place"/>

            <TextView
                android:id="@+id/activity_main_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/activity_main_place"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/activity_main_more"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:background="@drawable/main_more"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/activity_main_errorInfo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/activity_main_errorInfo"
        android:textSize="12sp"
        android:textColor="@color/red"
        android:visibility="invisible"/>

    <com.android.leezp.androidimhwweatherdemo.View.CircleView
        android:id="@+id/activity_main_weather"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/activity_main_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/activity_main_week"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/activity_main_nowWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/activity_main_nowWeather"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        android:layout_weight="3"
        android:weightSum="4"
        android:gravity="center_vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="130dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/activity_main_future_one_weather"
                android:layout_marginTop="10dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/weather_cloudy"/>

            <TextView
                android:id="@+id/activity_main_future_one_temp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_futureTemp"
                android:textSize="15sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/activity_main_future_one_week"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_futureWeek"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="120dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="130dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/activity_main_future_two_weather"
                android:layout_marginTop="10dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/weather_sunny"/>

            <TextView
                android:id="@+id/activity_main_future_two_temp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_futureTemp"
                android:textSize="15sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/activity_main_future_two_week"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_futureWeek"
                android:textSize="15sp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="120dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="130dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/activity_main_future_three_weather"
                android:layout_marginTop="10dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/weather_heavy_rain"/>

            <TextView
                android:id="@+id/activity_main_future_three_temp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_futureTemp"
                android:textSize="15sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/activity_main_future_three_week"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_futureWeek"
                android:textSize="15sp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="120dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="130dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/activity_main_future_four_weather"
                android:layout_marginTop="10dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/weather_light_rain"/>

            <TextView
                android:id="@+id/activity_main_future_four_temp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_futureTemp"
                android:textSize="15sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/activity_main_future_four_week"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_futureWeek"
                android:textSize="15sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
